--- a/nx.json
+++ b/nx.json
@@ -118,9 +118,19 @@
         "dev": {
           "reporters": ["default"]
         },
-        "ci": {
+        "ci.unit": {
           "ci": true,
-          "codeCoverage": true
+          "codeCoverage": true,
+          "color": true,
+          "parallel": 3,
+          "testPathIgnorePatterns": ["i.spec.ts"]
+        },
+        "ci.integration": {
+          "ci": true,
+          "codeCoverage": true,
+          "color": true,
+          "testPathPattern": ["i.spec.ts"],
+          "runInBand": true
         },
         "test.unit": {
           "reporters": ["default"],
