--- a/package.json
+++ b/package.json
@@ -411,6 +411,7 @@
     "eslint-plugin-unicorn": "55.0.0",
     "eslint-plugin-unused-imports": "3.2.0",
     "execa": "5.1.1",
+    "git-changed-files": "^1.0.0",
     "husky": "9.0.11",
     "is-port-reachable": "3.1.0",
     "jest": "29.7.0",
@@ -426,7 +427,6 @@
     "nx": "19.7.2",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.45",
-    "simple-git": "^3.26.0",
     "tailwindcss": "3.4.10",
     "ts-essentials": "9.1.2",
     "ts-jest": "^29.1.0",
