--- a/package.json
+++ b/package.json
@@ -83,14 +83,14 @@
     "@neo4j/graphql": "4.4.5",
     "@neo4j/graphql-ogm": "4.4.5",
     "@nestjs/apollo": "12.2.0",
-    "@nestjs/common": "10.4.0",
+    "@nestjs/common": "10.4.1",
     "@nestjs/config": "3.2.3",
-    "@nestjs/core": "10.4.0",
+    "@nestjs/core": "10.4.1",
     "@nestjs/cqrs": "10.2.7",
     "@nestjs/event-emitter": "2.0.4",
     "@nestjs/graphql": "12.2.0",
     "@nestjs/passport": "10.0.3",
-    "@nestjs/platform-express": "10.4.0",
+    "@nestjs/platform-express": "10.4.1",
     "@nestjs/swagger": "7.4.0",
     "@newrelic/browser-agent": "1.253.0",
     "@next/bundle-analyzer": "14.2.8",
@@ -285,9 +285,10 @@
     "@graphql-eslint/eslint-plugin": "3.20.1",
     "@graphql-hive/cli": "0.34.0",
     "@ls-lint/ls-lint": "2.0.0",
-    "@nestjs/cli": "10.4.4",
-    "@nestjs/schematics": "10.1.3",
-    "@nestjs/testing": "10.4.0",
+    "@nestjs/cli": "10.4.5",
+    "@nestjs/devtools-integration": "^0.1.6",
+    "@nestjs/schematics": "10.1.4",
+    "@nestjs/testing": "10.4.1",
     "@next/eslint-plugin-next": "^14.2.3",
     "@nx/devkit": "19.7.2",
     "@nx/eslint": "19.7.2",
