--- a/libs/frontend/presentation/codelab-ui/.eslintrc.json
+++ b/libs/frontend/presentation/codelab-ui/.eslintrc.json
@@ -6,8 +6,7 @@
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
         "project": [
-          "libs/frontend/presentation/codelab-ui/tsconfig.*?.json",
-          "libs/frontend/presentation/codelab-ui/tsconfig.storybook.json"
+          "libs/frontend/presentation/codelab-ui/tsconfig.*?.json"
         ]
       },
       "rules": {
