--- a/libs/frontend/presentation/codelab-ui/.eslintrc.json
+++ b/libs/frontend/presentation/codelab-ui/.eslintrc.json
@@ -5,9 +5,7 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
-        "project": [
-          "libs/frontend/presentation/codelab-ui/tsconfig.*?.json"
-        ]
+        "project": ["libs/frontend/presentation/codelab-ui/tsconfig.*?.json"]
       },
       "rules": {
         "react/jsx-props-no-spreading": "off"
