--- a/apps/web-e2e/project.json
+++ b/apps/web-e2e/project.json
@@ -16,7 +16,10 @@
       },
       "configurations": {
         "test": {},
-        "ci": {}
+        "ci": {
+          "fullyParallel": false,
+          "workers": 1
+        }
       }
     },
     "e2e-ui": {
