--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -11,8 +11,7 @@ resource_class: << parameters.resource_class >>
 environment:
   NODE_OPTIONS: --max-old-space-size=<< parameters.max_old_space_size >>
 
-# Cypress requires record for parallel to work according to https://github.com/cypress-io/cypress/issues/2520
-# parallelism: 4
+parallelism: 2
 steps:
   - restore-workspace
   - run: pnpm npx playwright install-deps
@@ -24,15 +23,14 @@ steps:
   - run:
       name: 'Run E2E Tests'
       # https://github.com/cypress-io/circleci-orb/issues/386
-      command: pnpm nx e2e web-e2e -c ci --verbose
-      # command: |
-      #   echo 'export SHARD="$((${CIRCLE_NODE_INDEX}+1))"' >> "$BASH_ENV"
-      #   source "$BASH_ENV"
+      # command: pnpm nx e2e web-e2e -c ci --verbose
+      command: |
+        SHARD="$((${CIRCLE_NODE_INDEX}+1))"
 
-      #   echo $SHARD;
-      #   echo $CIRCLE_NODE_TOTAL;
+        echo $SHARD;
+        echo $CIRCLE_NODE_TOTAL;
 
-      #   pnpm nx e2e web-e2e -c ci
+        pnpm nx e2e web-e2e -c ci --shard=${SHARD}/${CIRCLE_NODE_TOTAL}
   - store_artifacts:
       path: ~/project/dist/.playwright/apps/web-e2e/playwright-report
       destination: playwright-report
