--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test.unit": "nx run-many --all --target=test -c test.unit --parallel=5",
     "test.integration": "nx run-many --all --target=test -c test.integration --parallel=1",
     "lint": "nx run-many --all --target=lint --parallel=5",
-    "format": "npx prettier --write \"./**/*.{graphql,yaml,json}\" && terraform -chdir=infra/terraform fmt --recursive",
+    "format": "npx prettier --write \"./**/*.{graphql,yaml,json,css}\" && terraform -chdir=infra/terraform fmt --recursive",
     "nx": "nx",
     "update": "nx migrate @nx/workspace",
     "dep-graph": "nx dep-graph --watch",
@@ -142,6 +142,7 @@
     "@rjsf/core": "5.18.3",
     "@rjsf/utils": "5.18.3",
     "@rjsf/validator-ajv8": "5.18.3",
+    "@sentry/nextjs": "^8",
     "@shopify/network": "^3.3.0",
     "@shopify/react-performance": "^4.1.0",
     "@sinclair/typebox": "0.33.7",
