feat: setup sentry for logging

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -944,6 +944,7 @@
         "libs/shared/infra/auth0/src/server/index.ts"
       ],
       "@codelab/shared-infra-eval": ["libs/shared/infra/eval/src/index.ts"],
+      "@codelab/shared-infra-sentry": ["libs/shared/infra/sentry/src/index.ts"],
       "@codelab/shared/abstract/core": [
         "libs/shared/abstract/core/src/index.ts"
       ],
