--- a/.env.example
+++ b/.env.example
@@ -42,4 +42,9 @@ AUTH0_AUDIENCE=https://codelab-app-dev.us.auth0.com/api/v2/
 
 # AUTH0_ISSUER_BASE_URL=https://codelab-app-dev.us.auth0.com/
 
-
+#
+# Sentry
+#
+# The SENTRY_AUTH_TOKEN variable is picked up by the Sentry Build Plugin.
+# It's used for authentication when uploading source maps.
+SENTRY_AUTH_TOKEN=
