--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "@rjsf/utils": "5.18.3",
     "@rjsf/validator-ajv8": "5.18.3",
     "@sentry/nextjs": "^8",
+    "@sentry/react": "^8.33.1",
     "@shopify/network": "^3.3.0",
     "@shopify/react-performance": "^4.1.0",
     "@sinclair/typebox": "0.33.7",
@@ -310,6 +311,8 @@
     "@nx/workspace": "19.8.3",
     "@parcel/watcher": "^2.4.1",
     "@playwright/test": "1.47.2",
+    "@sentry/types": "^8.33.1",
+    "@sentry/utils": "^8.33.1",
     "@storybook/addon-essentials": "8.2.9",
     "@storybook/addon-interactions": "8.2.9",
     "@storybook/addon-themes": "^8.1.11",
