ci: fix atom specs

--- a/apps/web-e2e/project.json
+++ b/apps/web-e2e/project.json
@@ -32,7 +32,10 @@
         "ui": true
       },
       "configurations": {
-        "test": {}
+        "test": {
+          "fullyParallel": false,
+          "workers": 1
+        }
       }
     },
     "lint": {
