--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "@apollo/server": "4.7.2",
     "@auth0/nextjs-auth0": "3.5.0",
     "@awwong1/oauth4webapi": "1.0.0",
-    "@codelab-codegen/typescript-fetch": "file:dist/libs/external/codelab-codegen/typescript-fetch",
     "@codelab-codegen/client-preset-documents": "file:dist/libs/external/codelab-codegen/client-preset-documents",
+    "@codelab-codegen/typescript-fetch": "file:dist/libs/external/codelab-codegen/typescript-fetch",
     "@codelab/eslint-plugin": "file:dist/libs/tools/eslint-plugin",
     "@codelab/tools-workspace": "file:dist/libs/tools/workspace",
     "@codemirror/autocomplete": "6.12.0",
@@ -422,6 +422,7 @@
     "husky": "9.0.11",
     "is-port-reachable": "3.1.0",
     "jest": "29.7.0",
+    "jest-dev-server": "^10.1.1",
     "jest-environment-jsdom": "29.7.0",
     "jest-environment-node": "29.7.0",
     "jest-junit": "16.0.0",
