--- a/libs/shared/infra/fetch/project.json
+++ b/libs/shared/infra/fetch/project.json
@@ -1,9 +1,15 @@
 {
   "name": "shared-infra-fetch",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/infra/fetch/src",
   "projectType": "library",
-  "tags": ["scope:shared"],
+  "sourceRoot": "libs/shared/infra/fetch/src",
+  "tags": [
+    "projectName:shared-infra-fetch",
+    "projectType:library",
+    "type:concrete",
+    "layer:infra",
+    "scope:shared"
+  ],
   "// targets": "to see all targets run: nx show project shared-infra-fetch --web",
   "targets": {}
 }
