--- a/libs/frontend/presentation/components/interface-form/tsconfig.spec.json
+++ b/libs/frontend/presentation/components/interface-form/tsconfig.spec.json
@@ -6,6 +6,7 @@
     "types": ["jest", "node", "@testing-library/jest-dom"]
   },
   "include": [
+    "jest.mocks.ts",
     "jest.config.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
