--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@nestjs/swagger": "7.4.0",
     "@newrelic/browser-agent": "1.253.0",
     "@next/bundle-analyzer": "14.2.8",
+    "@opentelemetry/api": "^1.9.0",
     "@pinojs/json-colorizer": "4.0.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
