--- a/package.json
+++ b/package.json
@@ -79,8 +79,6 @@
     "@lexical/react": "0.17.1",
     "@lexical/utils": "0.17.1",
     "@mailchimp/mailchimp_marketing": "3.0.80",
-    "@mui/material": "5.16.7",
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
     "@neo4j/graphql": "4.4.5",
     "@neo4j/graphql-ogm": "4.4.5",
     "@nestjs/apollo": "12.2.0",
@@ -282,22 +280,22 @@
     "@nestjs/schematics": "10.1.4",
     "@nestjs/testing": "10.4.1",
     "@next/eslint-plugin-next": "^14.2.3",
-    "@nx/devkit": "19.8.3",
-    "@nx/eslint": "19.8.3",
-    "@nx/eslint-plugin": "19.8.3",
-    "@nx/jest": "19.8.3",
-    "@nx/js": "19.8.3",
-    "@nx/nest": "19.8.3",
-    "@nx/next": "19.8.3",
-    "@nx/node": "19.8.3",
-    "@nx/playwright": "19.8.3",
-    "@nx/plugin": "19.8.3",
-    "@nx/react": "19.8.3",
-    "@nx/storybook": "19.8.3",
-    "@nx/vite": "19.8.3",
-    "@nx/web": "19.8.3",
-    "@nx/webpack": "19.8.3",
-    "@nx/workspace": "19.8.3",
+    "@nx/devkit": "20.0.9",
+    "@nx/eslint": "20.0.9",
+    "@nx/eslint-plugin": "20.0.9",
+    "@nx/jest": "20.0.9",
+    "@nx/js": "20.0.9",
+    "@nx/nest": "20.0.9",
+    "@nx/next": "20.0.9",
+    "@nx/node": "20.0.9",
+    "@nx/playwright": "20.0.9",
+    "@nx/plugin": "20.0.9",
+    "@nx/react": "20.0.9",
+    "@nx/storybook": "20.0.9",
+    "@nx/vite": "20.0.9",
+    "@nx/web": "20.0.9",
+    "@nx/webpack": "20.0.9",
+    "@nx/workspace": "20.0.9",
     "@parcel/watcher": "^2.4.1",
     "@playwright/test": "1.47.2",
     "@sentry/types": "^8.35.0",
@@ -384,12 +382,12 @@
     "dotenv": "15.0.0",
     "env-cmd": "10.1.0",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "15.0.2",
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-node": "0.3.9",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-canonical": "4.15.1",
-    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jest": "27.6.0",
     "eslint-plugin-jest-formatting": "3.1.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
@@ -419,7 +417,7 @@
     "knip": "^5.29.2",
     "lint-staged": "13.2.2",
     "minimatch": "^9.0.4",
-    "nx": "19.8.3",
+    "nx": "20.0.9",
     "pino-pretty": "10.3.1",
     "postcss": "8.4.45",
     "tailwindcss": "3.4.10",
@@ -439,8 +437,7 @@
   },
   "resolutions": {
     "@types/react": "18.3.0",
-    "@types/react-dom": "18.3.0",
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
+    "@types/react-dom": "18.3.0"
   },
   "nx": {
     "includedScripts": [],
