--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -273,6 +273,7 @@ jobs:
 
             pnpm nx e2e web-e2e -c ci --shard=${SHARD}/${CIRCLE_NODE_TOTAL}
           name: Run E2E Tests
+          no_output_timeout: 15m
       - store_artifacts:
           destination: playwright-report
           path: ~/project/dist/.playwright/apps/web-e2e/playwright-report
