--- a/package.json
+++ b/package.json
@@ -195,6 +195,7 @@
     "next": "14.2.16",
     "next-seo": "6.5.0",
     "next-themes": "^0.3.0",
+    "nuqs": "^2.1.2",
     "object-typed": "1.0.0",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
