--- a/.circleci/config/jobs/e2e.yml
+++ b/.circleci/config/jobs/e2e.yml
@@ -24,6 +24,7 @@ steps:
       name: 'Run E2E Tests'
       # https://github.com/cypress-io/circleci-orb/issues/386
       # command: pnpm nx e2e web-e2e -c ci --verbose
+      no_output_timeout: 15m
       command: |
         SHARD="$((${CIRCLE_NODE_INDEX}+1))"
 
