--- a/libs/shared/domain/module/field/project.json
+++ b/libs/shared/domain/module/field/project.json
@@ -3,6 +3,12 @@
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/shared/domain/module/field/src",
   "projectType": "library",
-  "tags": ["scope:shared"],
+  "tags": [
+    "projectName:field",
+    "projectType:library",
+    "type:concrete",
+    "scope:shared"
+  ],
+  "// targets": "to see all targets run: nx show project field --web",
   "targets": {}
 }
