--- a/package.json
+++ b/package.json
@@ -93,46 +93,46 @@
     "@nestjs/platform-express": "10.4.1",
     "@nestjs/swagger": "7.4.0",
     "@next/bundle-analyzer": "14.2.8",
-    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/api": "1.9.0",
     "@pinojs/json-colorizer": "4.0.0",
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-alert-dialog": "^1.1.1",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-collapsible": "^1.1.0",
-    "@radix-ui/react-context-menu": "^2.2.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-hover-card": "^1.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-menubar": "^1.1.1",
-    "@radix-ui/react-navigation-menu": "^1.2.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-radio-group": "^1.2.0",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/react-accordion": "1.2.0",
+    "@radix-ui/react-alert-dialog": "1.1.1",
+    "@radix-ui/react-aspect-ratio": "1.1.0",
+    "@radix-ui/react-avatar": "1.1.0",
+    "@radix-ui/react-checkbox": "1.1.1",
+    "@radix-ui/react-collapsible": "1.1.0",
+    "@radix-ui/react-context-menu": "2.2.1",
+    "@radix-ui/react-dialog": "1.1.1",
+    "@radix-ui/react-dropdown-menu": "2.1.1",
+    "@radix-ui/react-hover-card": "1.1.1",
+    "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-menubar": "1.1.1",
+    "@radix-ui/react-navigation-menu": "1.2.0",
+    "@radix-ui/react-popover": "1.1.1",
+    "@radix-ui/react-progress": "1.1.0",
+    "@radix-ui/react-radio-group": "1.2.0",
+    "@radix-ui/react-scroll-area": "1.1.0",
+    "@radix-ui/react-select": "2.1.1",
+    "@radix-ui/react-separator": "1.1.0",
+    "@radix-ui/react-slider": "1.2.0",
+    "@radix-ui/react-slot": "1.1.0",
+    "@radix-ui/react-switch": "1.1.0",
+    "@radix-ui/react-tabs": "1.1.0",
+    "@radix-ui/react-toast": "1.2.1",
+    "@radix-ui/react-toggle": "1.1.0",
+    "@radix-ui/react-toggle-group": "1.1.0",
+    "@radix-ui/react-tooltip": "1.1.2",
     "@react-spring/web": "9.7.3",
     "@rjsf/antd": "5.18.5",
     "@rjsf/core": "5.18.3",
     "@rjsf/utils": "5.18.3",
     "@rjsf/validator-ajv8": "5.18.3",
-    "@sentry/nextjs": "^8",
-    "@sentry/profiling-node": "^8.35.0",
-    "@sentry/react": "^8.35.0",
-    "@shopify/network": "^3.3.0",
-    "@shopify/react-performance": "^4.1.0",
+    "@sentry/nextjs": "8",
+    "@sentry/profiling-node": "8.35.0",
+    "@sentry/react": "8.35.0",
+    "@shopify/network": "3.3.0",
+    "@shopify/react-performance": "4.1.0",
     "@sinclair/typebox": "0.33.7",
     "@sotaproject/strikethrough": "1.0.1",
     "@supabase/supabase-js": "2.1.1",
@@ -195,7 +195,6 @@
     "next": "14.2.16",
     "next-seo": "6.5.0",
     "next-themes": "^0.3.0",
-    "nuqs": "^2.1.2",
     "object-typed": "1.0.0",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
@@ -275,6 +274,7 @@
     "@graphql-codegen/visitor-plugin-common": "^5.3.1",
     "@graphql-eslint/eslint-plugin": "3.20.1",
     "@graphql-hive/cli": "0.34.0",
+    "@jest/globals": "^29.7.0",
     "@ls-lint/ls-lint": "2.0.0",
     "@nestjs/cli": "10.4.5",
     "@nestjs/devtools-integration": "^0.1.6",
@@ -397,7 +397,7 @@
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-readable-tailwind": "^1.8.0",
     "eslint-plugin-sort-destructure-keys": "1.5.0",
     "eslint-plugin-tailwindcss": "3.17.4",
