--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "1.21.1",
     "@ant-design/icons": "5.4.0",
+    "@ant-design/nextjs-registry": "^1.0.2",
     "@ant-design/pro-components": "2.7.15",
     "@apollo/client": "3.7.15",
     "@apollo/server": "4.7.2",
@@ -145,7 +146,7 @@
     "ajv": "8.12.0",
     "animate.css": "4.1.1",
     "antd": "5.20.2",
-    "antd-style": "^3.6.2",
+    "antd-style": "^3.7.1",
     "auth0": "4.7.0",
     "auto-bind": "^5.0.1",
     "axios": "1.7.1",
