feat: add breakpoints to resize panel (#3529)
* refactor: form callback

* feat: resize browser should keep static pane width

* feat: resize browser should keep static pane width

* feat: resize browser should keep static pane width

* feat: resize browser should keep static pane width

* feat: resize browser snap to breakpoints

* feat: resize browser snap to breakpoints

* chore: update antd registry

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "1.21.1",
     "@ant-design/icons": "5.4.0",
+    "@ant-design/nextjs-registry": "^1.0.2",
     "@ant-design/pro-components": "2.7.15",
     "@apollo/client": "3.7.15",
     "@apollo/server": "4.7.2",
@@ -145,7 +146,7 @@
     "ajv": "8.12.0",
     "animate.css": "4.1.1",
     "antd": "5.20.2",
-    "antd-style": "^3.6.2",
+    "antd-style": "^3.7.1",
     "auth0": "4.7.0",
     "auto-bind": "^5.0.1",
     "axios": "1.7.1",
@@ -219,7 +220,7 @@
     "react-is": "18.3.1",
     "react-quill": "2.0.0",
     "react-resizable": "3.0.4",
-    "react-resizable-panels": "2.1.2",
+    "react-resizable-panels": "2.1.7",
     "react-responsive": "9.0.0-beta.10",
     "react-slick": "0.29.0",
     "react-sticky-box": "2.0.0",
