--- a/.circleci/config/workflows/app.yml
+++ b/.circleci/config/workflows/app.yml
@@ -6,12 +6,14 @@ jobs:
         branches:
           only:
             - master
+            - staging
   - hold-deploy:
       # resource_class: medium
       filters:
         branches:
           only:
             - master
+            - staging
       type: approval
       requires:
         - setup-workspace
@@ -21,6 +23,7 @@ jobs:
         branches:
           only:
             - master
+            - staging
       requires:
         - hold-deploy
   - docker-web:
@@ -29,6 +32,7 @@ jobs:
         branches:
           only:
             - master
+            - staging
       context:
         - prod
       requires:
@@ -39,6 +43,7 @@ jobs:
         branches:
           only:
             - master
+            - staging
       context:
         - prod
       requires:
@@ -49,6 +54,7 @@ jobs:
         branches:
           only:
             - master
+            - staging
       context:
         - prod
       requires:
@@ -59,6 +65,7 @@ jobs:
         branches:
           only:
             - master
+            - staging
       context:
         - prod
       requires:
@@ -68,6 +75,7 @@ jobs:
         branches:
           only:
             - master
+            - staging
       requires:
         - docker-web
         - docker-api
@@ -78,6 +86,7 @@ jobs:
         branches:
           only:
             - master
+            - staging
       type: approval
       requires:
         - plan
@@ -86,5 +95,6 @@ jobs:
         branches:
           only:
             - master
+            - staging
       requires:
         - hold-apply
