--- a/.dockerignore
+++ b/.dockerignore
@@ -16,8 +16,8 @@
 !/package.json
 !/pnpm-lock.yaml
 !/tsconfig.base.json
-!/postcss.config.js
-!/tailwind.config.js
+!/postcss.config.cjs
+!/tailwind.config.ts
 
 !/types
 !/apps/web/
