ci: test out docker build
ci: test out docker build

ci: test out docker build

ci: test out docker build

ci: test out docker build

ci: test out docker build


ci: test out docker build

ci: test out docker build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -433,6 +433,7 @@ jobs:
       - install-terraform
       - increment-docker-version
       - login-docker
+      - increment-docker-version
       - persist_to_workspace:
           paths:
             - .docker/config.json
@@ -538,6 +539,7 @@ workflows:
             branches:
               only:
                 - master
+                - staging
           max_old_space_size: 6144
           resource_class: large
       - hold-deploy:
@@ -545,6 +547,7 @@ workflows:
             branches:
               only:
                 - master
+                - staging
           requires:
             - setup-workspace
           type: approval
@@ -571,6 +574,7 @@ workflows:
             branches:
               only:
                 - master
+                - staging
           requires:
             - hold-deploy
       - docker-web:
@@ -580,6 +584,7 @@ workflows:
             branches:
               only:
                 - master
+                - staging
           requires:
             - setup-infra-workspace
       - docker-api:
@@ -589,6 +594,7 @@ workflows:
             branches:
               only:
                 - master
+                - staging
           requires:
             - setup-infra-workspace
       - docker-sites:
@@ -598,6 +604,7 @@ workflows:
             branches:
               only:
                 - master
+                - staging
           requires:
             - setup-infra-workspace
       - docker-landing:
@@ -607,6 +614,7 @@ workflows:
             branches:
               only:
                 - master
+                - staging
           requires:
             - setup-infra-workspace
       - tf-plan:
@@ -614,6 +622,7 @@ workflows:
             branches:
               only:
                 - master
+                - staging
           requires:
             - docker-web
             - docker-api
@@ -625,6 +634,7 @@ workflows:
             branches:
               only:
                 - master
+                - staging
           requires:
             - tf-plan
           type: approval
@@ -633,6 +643,7 @@ workflows:
             branches:
               only:
                 - master
+                - staging
           requires:
             - hold-apply
           stage: prod
