--- a/.circleci/config/jobs/setup-infra-workspace.yml
+++ b/.circleci/config/jobs/setup-infra-workspace.yml
@@ -6,6 +6,7 @@ steps:
   - increment-docker-version
   # - install-packer
   - login-docker
+  - increment-docker-version
   - persist_to_workspace:
       root: ~/
       # Persists the docker login
