--- a/.circleci/config/jobs/setup-infra-workspace.yml
+++ b/.circleci/config/jobs/setup-infra-workspace.yml
@@ -1,7 +1,9 @@
 executor: docker-node
 resource_class: large
 steps:
+  - checkout
   - install-terraform
+  - increment-docker-version
   # - install-packer
   - login-docker
   - persist_to_workspace:
