--- a/.circleci/config/workflows/app.yml
+++ b/.circleci/config/workflows/app.yml
@@ -6,24 +6,41 @@ jobs:
         branches:
           only:
             - master
-            - staging
+  # Will increment docker tag in tf cloud
   - hold-deploy:
       # resource_class: medium
       filters:
         branches:
           only:
             - master
-            - staging
       type: approval
       requires:
         - setup-workspace
+  # Apply the new tf settings to ci
+  - tf-plan:
+      name: 'tf-plan-ci'
+      stage: ci
+      filters:
+        branches:
+          only:
+            - staging
+      requires:
+        - hold-deploy
+  - tf-apply:
+      name: 'tf-apply-ci'
+      stage: ci
+      filters:
+        branches:
+          only:
+            - staging
+      requires:
+        - tf-plan-ci
   - setup-infra-workspace:
       # resource_class: large
       filters:
         branches:
           only:
             - master
-            - staging
       requires:
         - hold-deploy
   - docker-web:
@@ -32,7 +49,6 @@ jobs:
         branches:
           only:
             - master
-            - staging
       context:
         - prod
       requires:
@@ -43,7 +59,6 @@ jobs:
         branches:
           only:
             - master
-            - staging
       context:
         - prod
       requires:
@@ -54,7 +69,6 @@ jobs:
         branches:
           only:
             - master
-            - staging
       context:
         - prod
       requires:
@@ -65,17 +79,16 @@ jobs:
         branches:
           only:
             - master
-            - staging
       context:
         - prod
       requires:
         - setup-infra-workspace
-  - plan:
+  - tf-plan:
       filters:
         branches:
           only:
             - master
-            - staging
+      stage: prod
       requires:
         - docker-web
         - docker-api
@@ -86,15 +99,14 @@ jobs:
         branches:
           only:
             - master
-            - staging
       type: approval
       requires:
-        - plan
-  - apply:
+        - tf-plan
+  - tf-apply:
       filters:
         branches:
           only:
             - master
-            - staging
+      stage: prod
       requires:
         - hold-apply
