--- a/.nxignore
+++ b/.nxignore
@@ -2,3 +2,5 @@
 /dist/libs/tools/eslint-plugin/
 /dist/libs/external/codelab-codegen/typescript-fetch
 /dist/libs/external/codelab-codegen/typescript-server-fetch
+
+# Issue on Docker build
