--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,18 @@
 # compiled output
 # Ignore everything in 'dist'
 /dist/*
+
 # Don't ignore 'libs' within 'dist'
 !/dist/libs/
+!/dist/apps/
+
 # Ignore everything in 'dist/libs' except 'tools'
 /dist/libs/*
 !/dist/libs/tools/
+
+/dist/apps/*
+!/dist/apps/cli/
+
 # Ignore everything in 'dist/libs/tools' except 'workspace'
 /dist/libs/tools/*
 !/dist/libs/tools/workspace/
