ci: add auto approve to tf for docker tag ci
ci: add auto approve to tf for docker tag ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -473,7 +473,7 @@ jobs:
           command: pnpm cli terraform --stage << parameters.stage >> init
           name: Terraform Init
       - run:
-          command: pnpm cli terraform --stage << parameters.stage >> apply --autoApprove
+          command: pnpm cli terraform --stage << parameters.stage >> --autoApprove apply
           name: Terraform Apply
   tf-plan:
     executor: docker-node
