--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ commands:
       - run:
           command: (./scripts/nx/reset-cache.sh)
       - run:
-          command: pnpm nx run-many --target=build --projects=web,api --parallel=3 -c ci --nx-bail
+          command: pnpm nx run-many --target=build --projects=web,api -c ci --nx-bail
       - save_cache:
           key: nx-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "pnpm-lock.yaml" }}
           name: Save NX Cache
@@ -539,7 +539,6 @@ workflows:
             branches:
               only:
                 - master
-                - staging
           max_old_space_size: 6144
           resource_class: large
       - hold-deploy:
@@ -547,7 +546,6 @@ workflows:
             branches:
               only:
                 - master
-                - staging
           requires:
             - setup-workspace
           type: approval
@@ -574,7 +572,6 @@ workflows:
             branches:
               only:
                 - master
-                - staging
           requires:
             - hold-deploy
       - docker-web:
@@ -584,7 +581,6 @@ workflows:
             branches:
               only:
                 - master
-                - staging
           requires:
             - setup-infra-workspace
       - docker-api:
@@ -594,7 +590,6 @@ workflows:
             branches:
               only:
                 - master
-                - staging
           requires:
             - setup-infra-workspace
       - docker-sites:
@@ -604,7 +599,6 @@ workflows:
             branches:
               only:
                 - master
-                - staging
           requires:
             - setup-infra-workspace
       - docker-landing:
@@ -614,7 +608,6 @@ workflows:
             branches:
               only:
                 - master
-                - staging
           requires:
             - setup-infra-workspace
       - tf-plan:
@@ -622,7 +615,6 @@ workflows:
             branches:
               only:
                 - master
-                - staging
           requires:
             - docker-web
             - docker-api
@@ -634,7 +626,6 @@ workflows:
             branches:
               only:
                 - master
-                - staging
           requires:
             - tf-plan
           type: approval
@@ -643,7 +634,6 @@ workflows:
             branches:
               only:
                 - master
-                - staging
           requires:
             - hold-apply
           stage: prod
@@ -665,7 +655,7 @@ workflows:
               ignore:
                 - master
                 - staging
-          max_old_space_size: 6144
+          max_old_space_size: 8192
           requires:
             - setup-workspace
           resource_class: large
