--- a/package.json
+++ b/package.json
@@ -438,7 +438,8 @@
   },
   "resolutions": {
     "@types/react": "18.3.0",
-    "@types/react-dom": "18.3.0"
+    "@types/react-dom": "18.3.0",
+    "@opentelemetry/instrumentation": "0.54.1"
   },
   "nx": {
     "includedScripts": [],
