ci: add auto approve to tf for docker tag version (#3532)
* refactor: form callback

* feat: resize browser should keep static pane width

* feat: resize browser snap to breakpoints

* chore: update antd registry

* ci: test out docker build

* ci: update dockerignore

* ci: test out docker build

* ci: add auto approve to tf for docker tag ci

* ci: test out docker build

* ci: remove verbse from nx

* lint: fix tailwind

* ci: increase memory, remove parallel

--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -15,8 +15,7 @@ steps:
   - run:
       command: (./scripts/nx/reset-cache.sh)
   - run:
-      #   command: pnpm nx affected --target=build --parallel=3 -c ci --nx-bail
-      command: pnpm nx run-many --target=build --projects=cli,web,api --parallel=3 -c ci --nx-bail
+      command: pnpm nx run-many --target=build --projects=web,api -c ci --nx-bail
   # CI caching guide https://nextjs.org/docs/pages/building-your-application/deploying/ci-build-caching
   - save_cache:
       name: 'Save NX Cache'
