--- a/.circleci/config/jobs/docker-landing.yml
+++ b/.circleci/config/jobs/docker-landing.yml
@@ -1,5 +1,10 @@
 executor: docker-node
-resource_class: medium
+
+resource_class: large
+
+environment:
+  NODE_OPTIONS: --max-old-space-size=6144
+
 steps:
   - restore-workspace
     # This step ensures that Docker commands run in this job will execute on a remote Docker engine.
@@ -9,8 +14,6 @@ steps:
   - run:
       name: 'Build landing Docker image'
       command: (./scripts/docker/prod/build-landing.sh)
-      # command: |
-      #   docker compose --verbose -f .docker/prod/build.docker-compose.yaml build landing
   - run:
       name: 'Push Docker Image'
       command: docker compose --verbose -f .docker/prod/build.docker-compose.yaml push landing
