--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "MIT",
   "sideEffects": false,
   "scripts": {
-    "postinstall": "nx build cli",
     "e2e": "nx e2e-ui web-e2e -c test",
     "e2e:web": "nx serve web -c test",
     "e2e:api": "nx serve api -c test",
@@ -439,7 +438,8 @@
   },
   "resolutions": {
     "@types/react": "18.3.0",
-    "@types/react-dom": "18.3.0"
+    "@types/react-dom": "18.3.0",
+    "@opentelemetry/instrumentation": "0.54.1"
   },
   "nx": {
     "includedScripts": [],
