--- a/infra/terraform/modules/codelab-neo4j/tftpl/docker-compose.tftpl.yaml
+++ b/infra/terraform/modules/codelab-neo4j/tftpl/docker-compose.tftpl.yaml
@@ -9,7 +9,7 @@ networks:
 services:
   # Best practices https://assets.neo4j.com/Official-Materials/Neo4j+Monitoring+Best+Practices.pdf
   neo4j:
-    image: neo4j:5.25.1
+    image: neo4j:5.26.0-enterprise
     container_name: neo4j
     networks:
       - codelab
