--- a/.docker/dev/docker-compose.yaml
+++ b/.docker/dev/docker-compose.yaml
@@ -12,7 +12,7 @@ name: 'codelab'
 services:
   neo4j:
     container_name: codelab-neo4j
-    image: neo4j:5.25.1
+    image: neo4j:5.26.0-enterprise
     volumes:
       - codelab-neo4j:/data
       - codelab-neo4j:/plugins
@@ -38,10 +38,30 @@ services:
       # - NEO4J_dbms_allow__upgrade=true
     # networks: ["codelab-neo4j"]
     restart: unless-stopped
+    healthcheck:
+      test:
+        ['CMD-SHELL', 'wget -O /dev/null -q http://localhost:7474 || exit 1']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # Neo4j subscripts in @neo4j/graphql@6 requires an enterprise image with CDC enabled
+  # https://neo4j.com/docs/cdc/current/get-started/self-managed/
+  neo4j-init:
+    image: neo4j:5.26.0-enterprise
+    depends_on:
+      neo4j:
+        condition: service_healthy
+    command: >
+      bash -c "
+        cypher-shell -a neo4j:7687 -u neo4j -p password 'ALTER DATABASE neo4j SET OPTION txLogEnrichment \"DIFF\"'
+
+        cypher-shell -a neo4j:7687 -u neo4j -p password 'SHOW DATABASES YIELD name, options'
+      "
 
   neo4j-test:
     container_name: codelab-neo4j-test
-    image: neo4j:5.25.1
+    image: neo4j:5.26.0-enterprise
     volumes:
       - codelab-neo4j-test:/data
       - codelab-neo4j-test:/plugins
