--- a/.docker/dev/docker-compose.yaml
+++ b/.docker/dev/docker-compose.yaml
@@ -10,7 +10,7 @@
 version: '3.8'
 name: 'codelab'
 services:
-  neo4j:
+  codelab-neo4j:
     container_name: codelab-neo4j
     image: neo4j:5.26.0-enterprise
     volumes:
@@ -47,10 +47,11 @@ services:
 
   # Neo4j subscripts in @neo4j/graphql@6 requires an enterprise image with CDC enabled
   # https://neo4j.com/docs/cdc/current/get-started/self-managed/
-  neo4j-init:
+  neo4j:
+    container_name: codelab-neo4j-init
     image: neo4j:5.26.0-enterprise
     depends_on:
-      neo4j:
+      codelab-neo4j:
         condition: service_healthy
     command: >
       bash -c "
@@ -59,7 +60,7 @@ services:
         cypher-shell -a neo4j:7687 -u neo4j -p password 'SHOW DATABASES YIELD name, options'
       "
 
-  neo4j-test:
+  codelab-neo4j-test:
     container_name: codelab-neo4j-test
     image: neo4j:5.26.0-enterprise
     volumes:
@@ -79,6 +80,25 @@ services:
       - NEO4J_PLUGINS=["apoc"]
       - NEO4J_AUTH=neo4j/password
     restart: unless-stopped
+    healthcheck:
+      test:
+        ['CMD-SHELL', 'wget -O /dev/null -q http://localhost:7474 || exit 1']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  neo4j-test-init:
+    container_name: codelab-neo4j-test-init
+    image: neo4j:5.26.0-enterprise
+    depends_on:
+      codelab-neo4j-test:
+        condition: service_healthy
+    command: >
+      bash -c "
+        cypher-shell -a neo4j:7687 -u neo4j -p password 'ALTER DATABASE neo4j SET OPTION txLogEnrichment \"DIFF\"'
+
+        cypher-shell -a neo4j:7687 -u neo4j -p password 'SHOW DATABASES YIELD name, options'
+      "
 
   # Collectors, used for collecting metrics and traces
   opentelemetry:
