--- a/infra/terraform/modules/codelab-neo4j/tftpl/docker-compose.tftpl.yaml
+++ b/infra/terraform/modules/codelab-neo4j/tftpl/docker-compose.tftpl.yaml
@@ -35,6 +35,24 @@ services:
       - NEO4J_PLUGINS=["apoc"]
       - NEO4J_AUTH=neo4j/password
     restart: unless-stopped
+    healthcheck:
+      test:
+        ['CMD-SHELL', 'wget -O /dev/null -q http://localhost:7474 || exit 1']
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  neo4j-init:
+    image: neo4j:5.26.0-enterprise
+    depends_on:
+      neo4j:
+        condition: service_healthy
+    command: >
+      bash -c "
+        cypher-shell -a neo4j:7687 -u neo4j -p password 'ALTER DATABASE neo4j SET OPTION txLogEnrichment \"DIFF\"'
+
+        cypher-shell -a neo4j:7687 -u neo4j -p password 'SHOW DATABASES YIELD name, options'
+      "
 
   grafana-alloy:
     image: grafana/alloy:latest
