--- a/.docker/dev/docker-compose.yaml
+++ b/.docker/dev/docker-compose.yaml
@@ -40,24 +40,30 @@ services:
     restart: unless-stopped
     healthcheck:
       test:
-        ['CMD-SHELL', 'wget -O /dev/null -q http://localhost:7474 || exit 1']
+        [
+          'CMD-SHELL',
+          'wget -O /dev/null -q http://codelab-neo4j:7474 || exit 1',
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
 
   # Neo4j subscripts in @neo4j/graphql@6 requires an enterprise image with CDC enabled
+  # Easiest way is to use a docker container to run the cypher-shell
   # https://neo4j.com/docs/cdc/current/get-started/self-managed/
   neo4j:
     container_name: codelab-neo4j-init
     image: neo4j:5.26.0-enterprise
+    environment:
+      - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
     depends_on:
       codelab-neo4j:
         condition: service_healthy
     command: >
       bash -c "
-        cypher-shell -a neo4j:7687 -u neo4j -p password 'ALTER DATABASE neo4j SET OPTION txLogEnrichment \"DIFF\"'
+        cypher-shell -a codelab-neo4j:7687 -u neo4j -p password 'ALTER DATABASE neo4j SET OPTION txLogEnrichment \"DIFF\"'
 
-        cypher-shell -a neo4j:7687 -u neo4j -p password 'SHOW DATABASES YIELD name, options'
+        cypher-shell -a codelab-neo4j:7687 -u neo4j -p password 'SHOW DATABASES YIELD name, options'
       "
 
   codelab-neo4j-test:
@@ -82,7 +88,10 @@ services:
     restart: unless-stopped
     healthcheck:
       test:
-        ['CMD-SHELL', 'wget -O /dev/null -q http://localhost:7474 || exit 1']
+        [
+          'CMD-SHELL',
+          'wget -O /dev/null -q http://codelab-neo4j-test:7474 || exit 1',
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -90,14 +99,16 @@ services:
   neo4j-test:
     container_name: codelab-neo4j-test-init
     image: neo4j:5.26.0-enterprise
+    environment:
+      - NEO4J_ACCEPT_LICENSE_AGREEMENT=yes
     depends_on:
       codelab-neo4j-test:
         condition: service_healthy
     command: >
       bash -c "
-        cypher-shell -a neo4j:7687 -u neo4j -p password 'ALTER DATABASE neo4j SET OPTION txLogEnrichment \"DIFF\"'
+        cypher-shell -a codelab-neo4j-test:7687 -u neo4j -p password 'ALTER DATABASE neo4j SET OPTION txLogEnrichment \"DIFF\"'
 
-        cypher-shell -a neo4j:7687 -u neo4j -p password 'SHOW DATABASES YIELD name, options'
+        cypher-shell -a codelab-neo4j-test:7687 -u neo4j -p password 'SHOW DATABASES YIELD name, options'
       "
 
   # Collectors, used for collecting metrics and traces
