--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@ant-design/icons": "5.4.0",
     "@ant-design/nextjs-registry": "^1.0.2",
     "@ant-design/pro-components": "2.7.15",
-    "@apollo/client": "3.7.15",
-    "@apollo/server": "4.7.2",
+    "@apollo/client": "3.12.3",
+    "@apollo/server": "4.11.2",
     "@auth0/nextjs-auth0": "3.5.0",
     "@awwong1/oauth4webapi": "1.0.0",
     "@codelab-codegen/client-preset-documents": "file:dist/libs/external/codelab-codegen/client-preset-documents",
@@ -82,16 +82,16 @@
     "@mailchimp/mailchimp_marketing": "3.0.80",
     "@neo4j/graphql": "6.2.1",
     "@neo4j/graphql-ogm": "5.11.1",
-    "@nestjs/apollo": "12.2.0",
-    "@nestjs/common": "10.4.1",
-    "@nestjs/config": "3.2.3",
-    "@nestjs/core": "10.4.1",
-    "@nestjs/cqrs": "10.2.7",
-    "@nestjs/event-emitter": "2.0.4",
-    "@nestjs/graphql": "12.2.0",
+    "@nestjs/apollo": "12.2.2",
+    "@nestjs/common": "10.4.15",
+    "@nestjs/config": "3.3.0",
+    "@nestjs/core": "10.4.15",
+    "@nestjs/cqrs": "10.2.8",
+    "@nestjs/event-emitter": "2.1.1",
+    "@nestjs/graphql": "12.2.2",
     "@nestjs/passport": "10.0.3",
-    "@nestjs/platform-express": "10.4.1",
-    "@nestjs/swagger": "7.4.0",
+    "@nestjs/platform-express": "10.4.15",
+    "@nestjs/swagger": "8.1.0",
     "@next/bundle-analyzer": "14.2.8",
     "@opentelemetry/api": "1.9.0",
     "@pinojs/json-colorizer": "4.0.0",
@@ -191,7 +191,7 @@
     "multer": "1.4.5-lts.1",
     "neo4j-driver": "5.27.0",
     "nestjs-pino": "4.1.0",
-    "nestjs-typebox": "3.0.0-next.8",
+    "nestjs-typebox": "3.1.1",
     "next": "14.2.16",
     "next-seo": "6.5.0",
     "next-themes": "^0.3.0",
@@ -276,10 +276,10 @@
     "@graphql-hive/cli": "0.34.0",
     "@jest/globals": "^29.7.0",
     "@ls-lint/ls-lint": "2.0.0",
-    "@nestjs/cli": "10.4.5",
+    "@nestjs/cli": "10.4.9",
     "@nestjs/devtools-integration": "^0.1.6",
-    "@nestjs/schematics": "10.1.4",
-    "@nestjs/testing": "10.4.1",
+    "@nestjs/schematics": "10.2.3",
+    "@nestjs/testing": "10.4.15",
     "@next/eslint-plugin-next": "^14.2.3",
     "@nx/devkit": "20.1.4",
     "@nx/eslint": "20.1.4",
