--- a/libs/shared/config/env/.eslintrc.json
+++ b/libs/shared/config/env/.eslintrc.json
@@ -1,11 +1,11 @@
 {
-  "extends": ["../../../.eslintrc.json"],
+  "extends": ["../../../../.eslintrc.json"],
   "ignorePatterns": ["!**/*"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
-        "project": ["libs/shared/config/tsconfig.*?.json"]
+        "project": ["libs/shared/config/env/tsconfig.*?.json"]
       },
       "rules": {}
     },
