--- a/package.json
+++ b/package.json
@@ -438,9 +438,7 @@
   },
   "resolutions": {
     "@types/react": "18.3.0",
-    "@types/react-dom": "18.3.0",
-    "@neo4j/graphql": "6.2.1",
-    "neo4j-driver": "5.27.0"
+    "@types/react-dom": "18.3.0"
   },
   "nx": {
     "includedScripts": [],
