--- a/libs/backend/infra/adapter/neo4j/tsconfig.lib.json
+++ b/libs/backend/infra/adapter/neo4j/tsconfig.lib.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../../../../../dist/out-tsc",
     "declaration": true,
-    "types": ["node"],
+    "types": ["node", "cypher"],
     "target": "es2021",
     "strictNullChecks": true,
     "noImplicitAny": true,
